--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mturzynskanj/ui-react-lib",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A personalized UI library",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -11,7 +11,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "rollup -c --watch",
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "author": "mturzynska",
   "license": "ISC",
@@ -19,13 +21,26 @@
     "@types/react": "^18.2.58",
     "react": "^18.2.0",
     "rollup": "^4.12.0",
+    "styled-components": "^6.1.8",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "rollup-plugin-dts": "^6.1.0",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-typescript": "^11.1.6"
+    "@rollup/plugin-typescript": "^11.1.6",
+    "@storybook/addon-essentials": "^7.6.17",
+    "@storybook/addon-interactions": "^7.6.17",
+    "@storybook/addon-links": "^7.6.17",
+    "@storybook/addon-onboarding": "1.0.11",
+    "@storybook/blocks": "^7.6.17",
+    "@storybook/react": "^7.6.17",
+    "@storybook/react-webpack5": "^7.6.17",
+    "@storybook/test": "^7.6.17",
+    "postcss": "^8.4.35",
+    "react-dom": "18.2.0",
+    "rollup-plugin-dts": "^6.1.0",
+    "rollup-plugin-postcss": "^4.0.2",
+    "storybook": "^7.6.17"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/mturzynskajs"
