--- a/package.json
+++ b/package.json
@@ -12,18 +12,13 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "rollup -c --watch",
     "build": "rollup -c",
+    "build:watch": "rollup -c --watch",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "prebuild": "del -i dist"
   },
   "author": "mturzynska",
   "license": "ISC",
-  "dependencies": {
-    "@types/react": "^18.2.58",
-    "react": "^18.2.0",
-    "rollup": "^4.12.0",
-    "styled-components": "^6.1.8",
-    "typescript": "^5.3.3"
-  },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
@@ -37,12 +32,20 @@
     "@storybook/react-webpack5": "^7.6.17",
     "@storybook/test": "^7.6.17",
     "postcss": "^8.4.35",
-    "react-dom": "18.2.0",
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-postcss": "^4.0.2",
-    "storybook": "^7.6.17"
+    "storybook": "^7.6.17",
+    "@types/react": "^18.2.58",
+    "rollup": "^4.12.0",
+    "typescript": "^5.3.3"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/mturzynskajs"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "styled-components": "6.1.8",
+    "react-router-dom": "^6.16.0"
   }
 }
